Stub out task coordination experiments